scripts/nullness/annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Scenario.java:73: error: [override.return] Incompatible return type.
	@Nullable public String toString()
	                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Scenario
    @Initialized @Nullable String toString(@Initialized @NonNull Scenario this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:119: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _portagedItems, _subStacks
	public Stack(Unit unit,int unitID,int stackID)
	       ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:185: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _portagedItems, _subStacks
	public Stack(Stack stack)
	       ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:197: error: [method.invocation] call to setPositionLabel(java.lang.String) not allowed on the given receiver.
		setPositionLabel(stack.positionLabel());
		                ^
  found   : @UnderInitialization @NonNull Stack
  required: @Initialized @NonNull Stack
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:199: error: [method.invocation] call to addSubStack(jasl.ui.data.Stack) not allowed on the given receiver.
		addSubStack(stack);
		           ^
  found   : @UnderInitialization @NonNull Stack
  required: @Initialized @NonNull Stack
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:257: error: [override.return] Incompatible return type.
	@Nullable public String toString()
	                 ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
  Consequence: method in @Initialized @NonNull Stack
    @Initialized @Nullable String toString(@Initialized @NonNull Stack this)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull String toString(@Initialized @NonNull Object this)
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:259: error: [dereference.of.nullable] dereference of possibly-null reference _positionLabel
		if (!_positionLabel.isEmpty()) return _positionLabel;
		     ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:265: error: [dereference.of.nullable] dereference of possibly-null reference _subStacks.get(_subStacks.keySet().toArray()[0])
			return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
			                     ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:463: error: [dereference.of.nullable] dereference of possibly-null reference subStack
			subStack.setPositionLabel(_positionLabel);
			^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:522: error: [dereference.of.nullable] dereference of possibly-null reference subStack
			subStack.setPositionLabel(_positionLabel);
			^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Unit.java:179: error: [dereference.of.nullable] dereference of possibly-null reference _description
		return _description.toString();
		       ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:88: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(side)
		    _sides.get(side).addPlayer(name,nationality,entryTurn))
		              ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:93: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(side)
			list.addAll(_sides.get(side).playerList());
			                      ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:109: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(side)
		return _sides.get(side).player(name);
		                 ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:120: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(Side.Sides.ALLIES)
		_alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
		                                ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:123: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(Side.Sides.AXIS)
		_axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
		                              ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:53: error: [dereference.of.nullable] dereference of possibly-null reference deserializedLeader
        System.out.print(deserializedLeader.toText());
                         ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:179: error: [argument] incompatible argument for parameter newIdentity of Fighting.setIdentity.
            squadObject.setIdentity(null);
                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:540: error: [dereference.of.nullable] dereference of possibly-null reference alliedPlayer
        alliedPlayer.addUnit("9-1 Leader");
        ^
../annotator/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:547: error: [dereference.of.nullable] dereference of possibly-null reference axisPlayer
        axisPlayer.addUnit("8-1 Leader");
        ^
20 errors
